# froms

./: LICENSE  README  defunctor.cabal  froms.cabal
Data/: Defunctor.hs  From.hs
