Name            : Defunctor
Version         : 1.0
Cabal-Version   : >= 1.2
License         : BSD3
License-File    : LICENSE
Author          : Badi' Abdul-Wahid
Maintainer      : abdulwahidc@gmail.com
Homepage        : http://github.com/badi/defunctor
Category        : DataStructures
Synopsis        : Provide a class-based function to pull values out of functors.
Build-Type      : Simple
Description     : A generic way to pull the contained data out of functors and simple data types.

Library
    Build-depends		: base
    Exposed-modules		: Data.Defunctor Data.From
